kubernetes/back_service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: backend
spec:  
  type: ClusterIP
  selector:
    app: backend
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
