kubernetes/front_service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
spec:  
  type: ClusterIP
  selector:
    app: frontend
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
